--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "main": "build/backend/index.js",
   "types": "build/backend/index.d.js",
   "author": {
-    "name" : "Sam Lanning",
-    "email" : "sam@samlanning.com",
-    "url" : "https://samlanning.com/"
+    "name": "Sam Lanning",
+    "email": "sam@samlanning.com",
+    "url": "https://samlanning.com/"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/samlanning/synesthesia.git"
+    "type": "git",
+    "url": "https://github.com/samlanning/synesthesia.git"
   },
   "devDependencies": {
     "@types/react": "^16.0.38",
@@ -31,6 +31,8 @@
     "webpack": "1.14.0"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.118",
+    "lodash": "^4.17.11",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "styled-components": "^3.1.6",
