--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@samlanning/synesthesia-light-desk",
+  "name": "@synesthesia-project/light-desk",
   "version": "0.0.1",
-  "description": "Control lights and stuff",
+  "description": "A Node.js library for creating control panels for controlling lighting and other things",
   "license": "MIT",
   "main": "build/backend/index.js",
   "types": "build/backend/index.d.js",
@@ -15,6 +15,7 @@
     "url": "https://github.com/samlanning/synesthesia.git"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.118",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
     "@types/ws": "0.0.39",
@@ -24,18 +25,17 @@
     "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^3.1.4",
     "gulp-webpack": "1.5.0",
+    "lodash": "^4.17.11",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
     "run-sequence": "^1.2.2",
     "source-map-loader": "0.1.5",
+    "styled-components": "^3.1.6",
     "tslint": "^5.9.1",
     "typescript": "^2.7.2",
     "webpack": "1.14.0"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.118",
-    "lodash": "^4.17.11",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
-    "styled-components": "^3.1.6",
     "ws": "2.3.1"
   }
 }
