--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/samlanning/synesthesia.git"
+    "url": "https://github.com/synesthesia-project/light-desk"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.118",
@@ -25,7 +25,6 @@
     "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^5.0.0",
     "gulp-webpack": "1.5.0",
-    "lodash": "^4.17.11",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "run-sequence": "^1.2.2",
@@ -36,6 +35,7 @@
     "webpack": "1.14.0"
   },
   "dependencies": {
-    "ws": "2.3.1"
+    "ws": "2.3.1",
+    "lodash": "^4.17.11"
   }
 }
