--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "type": "git",
     "url": "https://github.com/synesthesia-project/light-desk"
   },
+  "scripts": {
+    "build": "gulp"
+  },
   "devDependencies": {
     "@types/lodash": "^4.14.118",
     "@types/react": "^16.0.38",
