--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "build": "gulp"
   },
   "devDependencies": {
+    "@synesthesia-project/gulp-util": "^0.0.1",
     "@types/lodash": "^4.14.118",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
     "@types/ws": "0.0.39",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-clean": "^0.3.2",
     "gulp-sourcemaps": "1.6.0",
     "gulp-tslint": "^8.1.3",
