--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/lodash": "^4.14.118",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
+    "@types/styled-components": "^5.1.19",
     "@types/ws": "0.0.39",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.3.2",
@@ -39,11 +40,12 @@
     "gulp-typedoc": "^2.2.1",
     "gulp-typescript": "^5.0.0",
     "gulp-webpack": "1.5.0",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-is": "^17.0.2",
     "run-sequence": "^1.2.2",
     "source-map-loader": "0.1.5",
-    "styled-components": "^3.1.6",
+    "styled-components": "^5.3.3",
     "tslint": "^5.9.1",
     "typedoc": "^0.14.0",
     "typescript": "^2.7.2",
