--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "source-map-loader": "0.1.5",
     "styled-components": "^5.3.3",
     "typedoc": "^0.22.10",
-    "typescript": "^4.5.4",
-    "webpack": "1.14.0"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "lodash": "^4.17.11",
