--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@synesthesia-project/gulp-util": "^0.0.2",
+    "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.118",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
@@ -49,5 +50,13 @@
   "dependencies": {
     "lodash": "^4.17.11",
     "ws": "3.3.1"
+  },
+  "peerDependencies": {
+    "@types/express": "^4.17.13"
+  },
+  "peerDependenciesMeta": {
+    "@types/express": {
+      "optional": true
+    }
   }
 }
